--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 license = {text = "MIT"}
 readme = "README.md"
 requires-python = ">=3.9,<4.0"
-dependencies = ["langgraph (>=0.3.5,<0.4.0)"]
+dependencies = ["langgraph (>=0.3.5,<0.4.0)", "langchain-openai (>=0.3.7,<0.4.0)", "langchain-community (>=0.3.19,<0.4.0)", "langchain-experimental (>=0.3.4,<0.4.0)"]
 
 [project.scripts]
 sx = "shellix.__main__:main"
